RealField refactoring